[package]
name = "busy"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
rand = "0.7"
dirs = "3.0"
yui = { git = "https://github.com/wehjin/yui.git" }
echo-lib = { git = "https://github.com/wehjin/gal-core.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.116"
reqwest = { version = "0.10", features = ["blocking", "json"] }
csv = "1.1"
